@@ -304,15 +304,29 @@ class TestTypeInference(unittest.TestCase):
 
         self.assertIsInstance(inferred[0][1], Text)
 
+    def test_limit(self):
+        rows = [
+            ('1.7',),
+            ('foo',),
+            ('',)
+        ]
+
+        tester = TypeTester(limit=1)
+        inferred = tester.run(rows, ['one'])
+
+        self.assertIsInstance(inferred[0][1], Number)
+
+        tester = TypeTester(limit=2)
+        inferred = tester.run(rows, ['one'])
+
+        self.assertIsInstance(inferred[0][1], Text)
+
     def test_table_from_csv(self):
         import csvkit
         from agate import table
         table.csv = csvkit
 
-        if six.PY2:
-            table = Table.from_csv('examples/test.csv', self.tester, encoding='utf8')
-        else:
-            table = Table.from_csv('examples/test.csv', self.tester)
+        table = Table.from_csv('examples/test.csv', self.tester)
 
         self.assertSequenceEqual(table.column_names, ['one', 'two', 'three'])
         self.assertSequenceEqual(tuple(map(type, table.column_types)), [Number, Number, Text])
